[Add] - Sliding movie images

--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
-
-<title>Our Project</title>
-
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="static/css/main.css"/>
+    <title>WatchAny</title>
+</head>
 <body>
-
-<h1>Group Members</h1>
-
-<p>Maxwell Icharia</p>
-<p>Farhiya Osman</p>
-<p>Nina Mutai</p>
-<p>Nicole-100947</p>
-
+<div id="container">
+   <div id="sliderbox">
+       <img src="static/img/maze_runner_death_cure.jpg" />
+       <img src="static/img/murder_on_the_orient_express.jpg" />
+       <img src="static/img/thor_ragnarock.jpg"/>
+       <img src="static/img/wolverine_one_last_time.jpg" />
+       <img src="static/img/blank_panther.jpg" />
+       <img src="static/img/rock.jpeg" />
+       <img src="static/img/captain_nawab.jpg" />
+   </div>
+</div>
+    <br/>
+    <hr/>
+    <vl/>
 </body>
-
-</HTML>
+</html>
