--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>WatchAny</title>
 </head>
 <body>
+<h1>AnyWatch</h1>
 <div id="container">
    <div id="sliderbox">
        <img src="static/img/maze_runner_death_cure.jpg" />
@@ -19,6 +20,6 @@
 </div>
     <br/>
     <hr/>
-    <vl/>
+    <div class="vl"></div>
 </body>
 </html>
