[Edit] - Formatting window

--- a/index.html
+++ b/index.html
@@ -9,17 +9,23 @@
 <h1>AnyWatch</h1>
 <div id="container">
    <div id="sliderbox">
-       <img src="static/img/maze_runner_death_cure.jpg" />
-       <img src="static/img/murder_on_the_orient_express.jpg" />
-       <img src="static/img/thor_ragnarock.jpg"/>
-       <img src="static/img/wolverine_one_last_time.jpg" />
-       <img src="static/img/blank_panther.jpg" />
-       <img src="static/img/rock.jpeg" />
-       <img src="static/img/captain_nawab.jpg" />
+        <picture>
+        <img src="static/img/maze_runner_death_cure.jpg" />
+        <img src="static/img/murder_on_the_orient_express.jpg" />
+        <img src="static/img/thor_ragnarock.jpg"/>
+        <img src="static/img/wolverine_one_last_time.jpg" />
+        <img src="static/img/blank_panther.jpg" />
+        <img src="static/img/rock.jpeg" />
+        <img src="static/img/captain_nawab.jpg" />
+        </picture>
    </div>
 </div>
     <br/>
     <hr/>
     <div class="vl"></div>
+    <div class="vl">
+         <button type="button">Click Me!</button>
+    </div>
+    <button type="button">Click Me!</button>
 </body>
 </html>
